# gothic3sdk

./: CMakeLists.txt
source/: CMakeLists.txt
